2005-03-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: correctly store the value cookies in Params. Fixes
	bug #73345.

2005-02-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: Path and FilePath also change when RewritePath is
	called. Fixes bug #73055.

2005-02-23  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequest.cs: Make sure that any access after a ValidateInput 
	throws an exception if the data isn't safe.

2005-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CapabilitiesLoader.cs: fix the path, as machine.config is now in a
	x.x/ directory below $PREFIX/etc/mono.

2005-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: fail on unicode full-width '<' and '>' too. Fixes
	a security report (http://secunia.com/advisories/14325) that wan't
	reported to us before public disclosure.

2005-02-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: send the calculated content length even when it's 0.
	Fixes bug #72655.

2005-02-04  Lluis Sanchez Gual <lluis@novell.com>

	* HttpContext.cs: Added internal property to keep a reference to
	the last accessed page. Page uses this to implement PreviousPage.

2005-02-02  Lluis Sanchez Gual <lluis@novell.com>

	* ProcessModelInfo.cs: Fixed warning.

2005-02-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TraceContext.cs: writing a message without any other argument is not
	a warniing. Fixes bug #72017.

2005-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: if there are no more handlers, finish the
	request and ensure we call Complete on it. Now FreeTextBox 3.0 works.

2004-12-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: honor the maxRequestSize limit from machine.config.

2004-12-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: reread application CultureInfo as web.config
	might have changed. Fixes bug #62539.

2004-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>